# redmine-service

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  bors.toml  build.rs  dotenv.example  flake.nix  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
proto/: redmine_api.proto
src/: main.rs
src/controller/: mod.rs
src/model/: mod.rs
src/model/types/: mod.rs
src/view/: time_entries.rs
