[package]
name = "redmine-service"
version = "0.1.0"
edition = "2021"
description = "Generate a markdown report by redmine time entries"
repository = "https://github.com/Mephistophiles/redmine-service"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "proto/redmine_api.proto", "build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.18"
log = "0.4.14"
opentelemetry = { version = "0.16.0", optional = true }
opentelemetry-jaeger = { version = "0.15.0", optional = true }
prost = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
time = { version = "0.3.5", features = ["formatting", "parsing", "macros"] }
tokio = {version = "1.14", features = ["rt-multi-thread"]}
tonic = "0.6.1"
tracing = { version = "0.1.29", optional = true }
tracing-opentelemetry = { version = "0.16", optional = true }
tracing-subscriber =  { version = "0.3", optional = true }

[features]
trace = [
    "tracing",
    "tracing-opentelemetry",
    "tracing-subscriber",
    "opentelemetry",
    "opentelemetry-jaeger",
]

[build-dependencies]
tonic-build = { version = "0.6.0", default-features = false, features = ["prost", "transport"] }

[dev-dependencies]
indoc = "1"
pretty_assertions = "1"
